[CET] 02_05: finish notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -75,6 +75,9 @@ Limits and Derivatives
 </li><li>
 <a href="02_04.html">The Precise Definition of a Limit</a>
 
+</li><li>
+<a href="02_05.html">Continuity</a>
+
 </li></ol>
 </li></ol>
 </div>
