[CET] 02_05: fix links [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_05.html
+++ b/src/Notes/Math/Calculus/CET/02_05.html
@@ -285,7 +285,7 @@ f(x) = \frac{P(x)}{Q(x)}
 \end{align}
 
 <p>
-where \(P\) and \(Q\) are polynomials. The domain of \(f\) is \(D = \{x \in \mathbb{R} | Q(x) \neq 0\}\). So we now, by the previous proof, that \(P\) and \(Q\) are continuous everywhere. Thus by the <a href="02_05.html#Laws of Continuity">Laws of Continuity</a> \(f\) is continuous at every number in \(D\) (its domain).
+where \(P\) and \(Q\) are polynomials. The domain of \(f\) is \(D = \{x \in \mathbb{R} | Q(x) \neq 0\}\). So we now, by the previous proof, that \(P\) and \(Q\) are continuous everywhere. Thus by the <a href="02_05.html#Properties of Continuous Functions">Properties of Continuous Functions</a> \(f\) is continuous at every number in \(D\) (its domain).
 </p>
 
 <div id="Continuity-Continuous Functions"><h2 id="Continuous Functions" class="header"><a href="#Continuity-Continuous Functions">Continuous Functions</a></h2></div>
