[CC] 05: finish notes [skip ci]

--- a/src/Notes/Math/Calculus/CET/02_05.html
+++ b/src/Notes/Math/Calculus/CET/02_05.html
@@ -328,7 +328,7 @@ If \(f\) is continuous at \(b\) and \(\lim_{x \rightarrow a} g(x) = b\), then \(
 </p>
 
 \begin{align}
-\lim_{x \rightarrow a} f(g(x)) = f\left(\lim_{x rightarrow} g(x)\right)
+\lim_{x \rightarrow a} f(g(x)) = f\left(\lim_{x \rightarrow a} g(x)\right)
 \end{align}
 
 <p>
