[ABPC] Continue notes [skip ci]

--- a/src/Notes/Music/ABPCI/01_notation.html
+++ b/src/Notes/Music/ABPCI/01_notation.html
@@ -100,6 +100,9 @@
 </li><li>
 <a href="01_notation.html#Overlapping%20Pedal">Overlapping Pedal</a>
 
+</li><li>
+<a href="01_notation.html#Eighth%20Note%20Triplets">Eighth Note Triplets</a>
+
 </li></ul>
 <hr>
 
@@ -361,6 +364,20 @@ And this is how you play it:
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/overlapping_pedal.png" alt="Overlapping Pedal">
+</p>
+
+<div id="Notation-Eighth Note Triplets"><h2 id="Eighth Note Triplets" class="header"><a href="#Notation-Eighth Note Triplets">Eighth Note Triplets</a></h2></div>
+
+<p>
+When three notes are grouped together with a figure \(3\) bove of below the notes, the group is called a <span id="Notation-Eighth Note Triplets-triplet"></span><strong id="triplet">triplet</strong>.
+</p>
+
+<p>
+The three notes of a eighth-note triplet group equal one quarter note.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/triplets.png" alt="Triplets">
 </p>
 </div>
   
