--- a/src/Notes/Music/ABPCI/04_chords.html
+++ b/src/Notes/Music/ABPCI/04_chords.html
@@ -104,6 +104,9 @@
 </li><li>
 <a href="04_chords.html#Primary%20Chords%20in%20Fa%20Major">Primary Chords in Fa Major</a>
 
+</li><li>
+<a href="04_chords.html#Primary%20Chords%20in%20Re%20Minor">Primary Chords in Re Minor</a>
+
 </li></ul>
 </li><li>
 <a href="04_chords.html#Chord%20Progressions">Chord Progressions</a>
@@ -322,15 +325,32 @@ The \(\textbf{V}\) chord is the <a href="04_chords.html#Re7">Re7 Major</a>.
  
 <ul>
 <li>
-The \(\textbf{I}\) chord is Fa Major.
+The \(\textbf{I}\) chord is <span id="Chords-Primary Chords-Primary Chords in Fa Major-Fa Major"></span><strong id="Fa Major">Fa Major</strong>.
 
 </li><li>
-The \(\textbf{IV}\) chord is the Sib Major.
+The \(\textbf{IV}\) chord is the <span id="Chords-Primary Chords-Primary Chords in Fa Major-Sib Major"></span><strong id="Sib Major">Sib Major</strong>.
 
 </li><li>
-The \(\textbf{V}\) chord is the Do Major.
+The \(\textbf{V}\) chord is the <span id="Chords-Primary Chords-Primary Chords in Fa Major-Do Major"></span><strong id="Do Major">Do Major</strong>.
 
 </li></ul>
+<div id="Chords-Primary Chords-Primary Chords in Re Minor"><h3 id="Primary Chords in Re Minor" class="header"><a href="#Chords-Primary Chords-Primary Chords in Re Minor">Primary Chords in Re Minor</a></h3></div>
+ 
+<ul>
+<li>
+The \(\textbf{I}\) chord is <span id="Chords-Primary Chords-Primary Chords in Re Minor-Re Minor"></span><strong id="Re Minor">Re Minor</strong> (Rem).
+
+</li><li>
+The \(\textbf{IV}\) chord is the <span id="Chords-Primary Chords-Primary Chords in Re Minor-Sol Minor"></span><strong id="Sol Minor">Sol Minor</strong> (Solm).
+
+</li><li>
+The \(\textbf{V}\) chord is the <span id="Chords-Primary Chords-Primary Chords in Re Minor-A7"></span><strong id="A7">A7</strong>.
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/re_primary_chords.png" alt="Re Minor Primery Chords">
+</p>
+
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/primary_chords_fa_major.png" alt="Primary Chords in Fa Major">
 </p>
