--- a/src/Notes/Music/ABPCI/06_keys.html
+++ b/src/Notes/Music/ABPCI/06_keys.html
@@ -58,6 +58,9 @@
 <li>
 <a href="06_keys.html#Relative%20Minor%20of%20Do%20Major%3A%20La%20Minor">Relative Minor of Do Major  La Minor</a>
 
+</li><li>
+<a href="06_keys.html#Relative%20Minor%20of%20Fa%20Major%3A%20Re%20Minor">Relative Minor of Fa Major  Re Minor</a>
+
 </li></ul>
 </li></ul>
 <hr>
@@ -118,6 +121,20 @@ Because the key of Do Major and La Minor have the same key signature (no sharps 
 
 <p>
 The minor scale shown above is called the <span id="Keys-Minor Keys-Relative Minor of Do Major: La Minor-natural minor scale"></span><strong id="natural minor scale">natural minor scale</strong>.
+</p>
+
+<div id="Keys-Minor Keys-Relative Minor of Fa Major: Re Minor"><h3 id="Relative Minor of Fa Major: Re Minor" class="header"><a href="#Keys-Minor Keys-Relative Minor of Fa Major: Re Minor">Relative Minor of Fa Major: Re Minor</a></h3></div>
+
+<p>
+The <span id="Keys-Minor Keys-Relative Minor of Fa Major: Re Minor-Re Minor"></span><strong id="Re Minor">Re Minor</strong> is the relative of <span id="Keys-Minor Keys-Relative Minor of Fa Major: Re Minor-Fa Major"></span><strong id="Fa Major">Fa Major</strong> and both keys have the same signature (1 flat: Si). Remember the relative minor beings on the <span id="Keys-Minor Keys-Relative Minor of Fa Major: Re Minor-6th"></span><strong id="6th">6th</strong> tone of the major scale.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/re_minor_key.png" alt="Re Minor Key">
+</p>
+
+<p>
+The minor scale shown above is the <span id="Keys-Minor Keys-Relative Minor of Fa Major: Re Minor-natural minor"></span><strong id="natural minor">natural minor</strong> scale. That is, a scale that only uses the notes that are found in the relative major scale.
 </p>
 </div>
   
