--- a/src/Notes/Music/ABPCI/05_scales.html
+++ b/src/Notes/Music/ABPCI/05_scales.html
@@ -55,11 +55,17 @@
 
 </li></ul>
 </li><li>
+<a href="05_scales.html#Harmonic%20Scale">Harmonic Scale</a>
+
+</li><li>
 <a href="05_scales.html#Minor%20Scales">Minor Scales</a>
 
 <ul>
 <li>
 <a href="05_scales.html#The%20La%20Harmonic%20Minor%20Scale">The La Harmonic Minor Scale</a>
+
+</li><li>
+<a href="05_scales.html#The%20Re%20Harmonic%20Minor%20Scale">The Re Harmonic Minor Scale</a>
 
 </li></ul>
 </li></ul>
@@ -105,16 +111,32 @@ The Fa Major Scale follows the following structure:
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/fa_major_scale.png" alt="Fa Major Scale">
 </p>
 
+<div id="Scales-Harmonic Scale"><h2 id="Harmonic Scale" class="header"><a href="#Scales-Harmonic Scale">Harmonic Scale</a></h2></div>
+
+<p>
+In the harmonic minor scale, the 7th tone is rained one semitone. You can see on the following image that the seventh tone is flat. This flat is not included in the key signature, but is written each time it occurs.
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/harmonic_minor_scale.png" alt="Harmonic La Minor Scale">
+</p>
+
 <div id="Scales-Minor Scales"><h2 id="Minor Scales" class="header"><a href="#Scales-Minor Scales">Minor Scales</a></h2></div>
 
 <div id="Scales-Minor Scales-The La Harmonic Minor Scale"><h3 id="The La Harmonic Minor Scale" class="header"><a href="#Scales-Minor Scales-The La Harmonic Minor Scale">The La Harmonic Minor Scale</a></h3></div>
 
 <p>
-This is the most frequently used minor scale. In this scale the 7th tone is flat. This flat is not included in the key signature, but is written each time it occurs.
+This is the most frequently used minor scale. 
 </p>
 
 <p>
 <img src="https://albamr09.github.io/public/images/Music/ABPCI/harmonic_minor_scale.png" alt="Harmonic La Minor Scale">
+</p>
+
+<div id="Scales-Minor Scales-The Re Harmonic Minor Scale"><h3 id="The Re Harmonic Minor Scale" class="header"><a href="#Scales-Minor Scales-The Re Harmonic Minor Scale">The Re Harmonic Minor Scale</a></h3></div>
+
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/re_harmonic_minor_scale.png" alt="Re Harmonic Minor Scale">
 </p>
 </div>
   
