--- a/src/Notes/ComputerScience/PR/CC/index.html
+++ b/src/Notes/ComputerScience/PR/CC/index.html
@@ -51,6 +51,9 @@
 </li><li>
 <a href="04.html">Formatting</a>
 
+</li><li>
+<a href="05.html">Objects and Data Structures</a>
+
 </li></ol>
 </div>
   
