[ABPC] Finish notes [skip ci]

--- a/src/Notes/Music/ABPCI/04_chords.html
+++ b/src/Notes/Music/ABPCI/04_chords.html
@@ -344,7 +344,7 @@ The \(\textbf{I}\) chord is <span id="Chords-Primary Chords-Primary Chords in Re
 The \(\textbf{IV}\) chord is the <span id="Chords-Primary Chords-Primary Chords in Re Minor-Sol Minor"></span><strong id="Sol Minor">Sol Minor</strong> (Solm).
 
 </li><li>
-The \(\textbf{V}\) chord is the <span id="Chords-Primary Chords-Primary Chords in Re Minor-A7"></span><strong id="A7">A7</strong>.
+The \(\textbf{V}\) chord is the <span id="Chords-Primary Chords-Primary Chords in Re Minor-La7"></span><strong id="La7">La7</strong>.
 
 </li></ul>
 <p>
