--- a/src/Notes/Music/ABPCI/06_keys.html
+++ b/src/Notes/Music/ABPCI/06_keys.html
@@ -62,6 +62,17 @@
 <a href="06_keys.html#Relative%20Minor%20of%20Fa%20Major%3A%20Re%20Minor">Relative Minor of Fa Major  Re Minor</a>
 
 </li></ul>
+</li><li>
+<a href="06_keys.html#Most%20Frequently%20Used%20Keys">Most Frequently Used Keys</a>
+
+<ul>
+<li>
+<a href="06_keys.html#Major%20Keys">Major Keys</a>
+
+</li><li>
+<a href="06_keys.html#Minor%20Keys%20%28Harmonic%20Minors%29">Minor Keys  Harmonic Minors</a>
+
+</li></ul>
 </li></ul>
 <hr>
 
@@ -135,6 +146,57 @@ The <span id="Keys-Minor Keys-Relative Minor of Fa Major: Re Minor-Re Minor"></s
 
 <p>
 The minor scale shown above is the <span id="Keys-Minor Keys-Relative Minor of Fa Major: Re Minor-natural minor"></span><strong id="natural minor">natural minor</strong> scale. That is, a scale that only uses the notes that are found in the relative major scale.
+</p>
+
+<div id="Keys-Most Frequently Used Keys"><h2 id="Most Frequently Used Keys" class="header"><a href="#Keys-Most Frequently Used Keys">Most Frequently Used Keys</a></h2></div>
+
+<div id="Keys-Most Frequently Used Keys-Major Keys"><h3 id="Major Keys" class="header"><a href="#Keys-Most Frequently Used Keys-Major Keys">Major Keys</a></h3></div>
+
+<ul>
+<li>
+<span id="Keys-Most Frequently Used Keys-Major Keys-Do Major"></span><strong id="Do Major">Do Major</strong>
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/do_major_key.png" alt="Do Major Key">
+</p>
+
+<ul>
+<li>
+<span id="Keys-Most Frequently Used Keys-Major Keys-Sol Major"></span><strong id="Sol Major">Sol Major</strong>: 1 sharp on Fa.
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/sol_major_key_1.png" alt="Sol Major Key">
+</p>
+
+<ul>
+<li>
+<span id="Keys-Most Frequently Used Keys-Major Keys-Fa Major"></span><strong id="Fa Major">Fa Major</strong>: 1 flat on Si.
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/fa_major_key_1.png" alt="Fa Major Key">
+</p>
+
+<div id="Keys-Most Frequently Used Keys-Minor Keys (Harmonic Minors)"><h3 id="Minor Keys (Harmonic Minors)" class="header"><a href="#Keys-Most Frequently Used Keys-Minor Keys (Harmonic Minors)">Minor Keys (Harmonic Minors)</a></h3></div>
+ 
+<ul>
+<li>
+<span id="Keys-Most Frequently Used Keys-Minor Keys (Harmonic Minors)-La Minor"></span><strong id="La Minor">La Minor</strong>: relative of Do Major.
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/la_minor_key.png" alt="La Minor Key">
+</p>
+
+<ul>
+<li>
+<span id="Keys-Most Frequently Used Keys-Minor Keys (Harmonic Minors)-Re Minor"></span><strong id="Re Minor">Re Minor</strong>: relative of Fa Major, 1 flat on Si.
+
+</li></ul>
+<p>
+<img src="https://albamr09.github.io/public/images/Music/ABPCI/re_minor_key_1.png" alt="Re Minor Key">
 </p>
 </div>
   
