[ICPDM] 02_02: improve notes [skip ci]

--- a/src/Notes/ComputerScience/PR/CC/index.html
+++ b/src/Notes/ComputerScience/PR/CC/index.html
@@ -54,6 +54,9 @@
 </li><li>
 <a href="05.html">Objects and Data Structures</a>
 
+</li><li>
+<a href="06.html">Error Handling</a>
+
 </li></ol>
 </div>
   
