[CC] 07: finish notes [skip ci]

--- a/src/Notes/ComputerScience/PR/CC/06.html
+++ b/src/Notes/ComputerScience/PR/CC/06.html
@@ -110,8 +110,7 @@ Each exception that you throw should provide enough context to determine the sou
 <div id="Error Handling-Define Exception Classes in Terms of a Caller's Needs"><h2 id="Define Exception Classes in Terms of a Caller's Needs" class="header"><a href="#Error Handling-Define Exception Classes in Terms of a Caller's Needs">Define Exception Classes in Terms of a Caller's Needs</a></h2></div>
 
 <p>
-Wrapping third-party APIs is a best practice. When you wrap a third-party API, you minimize you dependencies upon it. Wrapping also makes it easier to mock out third-party calls when you are
-testing your own code. One final advantage of wrapping is that you aren’t tied to a particular vendor's API design choices.
+Wrapping third-party APIs is a best practice. When you wrap a third-party API, you minimize you dependencies upon it. Wrapping also makes it easier to mock out third-party calls when you are testing your own code. One final advantage of wrapping is that you aren’t tied to a particular vendor's API design choices.
 </p>
 
 <div id="Error Handling-Don't Return Null"><h2 id="Don't Return Null" class="header"><a href="#Error Handling-Don't Return Null">Don't Return Null</a></h2></div>
