--- a/src/Notes/Math/Calculus/CET/index.html
+++ b/src/Notes/Math/Calculus/CET/index.html
@@ -78,6 +78,9 @@ Limits and Derivatives
 </li><li>
 <a href="02_05.html">Continuity</a>
 
+</li><li>
+<a href="02_06.html">Limits at Infinity. Horizontal Asymptotes</a>
+
 </li></ol>
 </li></ol>
 </div>
